--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^8.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "querystring": "^0.2.1"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
